@@ -69,7 +69,7 @@ clear
 print_header
 print_menu
 get_arch
-do_kernel
+#do_kernel
 check_mods_dir
 clean
 print_start
@@ -78,9 +78,10 @@ check_prelim_binaries
 check_binaries && check_modules
 copy_binaries && copy_modules
 copy_docs
+#copy_rules
 do_modules
 do_deps
 create_links
 config_files
 create
-clean_exit
+#clean_exit
