@@ -6,6 +6,8 @@
   be copied.
 - sys-fs/squashfs-tools must be installed on your system.
 - Some functions have been consolidated.
+- Restructured a bit how files are located and copied
+- udev rules will be copied to the initramfs/srm
 
 1.6.3
 ---------
